Fixed some z-index bugs and gallery effects

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -120,6 +120,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    z-index: 4;
 
 
     & > * {
@@ -348,8 +349,9 @@
 .gallery{
     display: flex;
     overflow: hidden;
-
+    
     &__item{
+        overflow: hidden;
         position:relative;
         // transition: all .5s;
     }
@@ -375,7 +377,7 @@
         color: rgba(white,0);
         opacity: 0;
         // outline: 2px dashed white;
-        transition: transform .2s, color .5s;
+        transition: transform .5s, color .5s;
         @media only screen and (max-width: $bp-smallest){
             font-size: 2rem;
         } 
@@ -600,7 +602,7 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
-    
+    z-index: 0;
     @media only screen and (max-width: $bp-medium){
         margin-bottom: 3rem;
         padding: 2rem;
@@ -721,6 +723,7 @@
 
 // MESSAGE BOX
 .message-box{
+    cursor: initial;
     opacity: 0;
     visibility: hidden;
     position:absolute;
@@ -754,7 +757,6 @@
         padding: .5rem 0;
         color: var(--color-primary);
         border-bottom: 1px solid  var(--color-grey-light-3);
-        border-top: 1px solid  var(--color-grey-light-3);
     }
     &__content{
         display:flex;
@@ -762,6 +764,7 @@
         padding: 1.5rem 1rem;
         align-content: center;
         align-items: center;
+        cursor: pointer;
         &:not(:last-child){
             border-bottom: 1px solid var(--color-grey-light-3);
         }
